--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -26,11 +26,11 @@
   "tooltip_terms": "Terms of use",
   "tooltip_coords": "Coordinate system",
   "toolsmenu_maps": "Map Time Series",
-  "toolsmenu_landuse": "Land Cover and Land use Time Series",
-  "toolsmenu_biomass": "Carbon stock Time Series",
-  "toolsmenu_onset": "Rainy season onset forecast",
-  "toolsmenu_mfview": "Groundwater model data viewer",
-  "toolsmenu_hidro": "Flow forecast",
+  "toolsmenu_landuse": "Land Cover and Land Use Time Series",
+  "toolsmenu_biomass": "Carbon Stocks Time Series",
+  "toolsmenu_onset": "Rainy Season Onset Forecast",
+  "toolsmenu_mfview": "Groundwater Model Data Viewer",
+  "toolsmenu_hidro": "Stream Water Flow Forecast",
   "modal_terms_title": "Carbon Stock Time Series - Terms of use",
   "terms_of_use": "The user assumes all risk related to the use of information on the web pages of this platform. UFV provides this information as it is presented, and UFV disclaims any and all warranties, express or implied, including (but not limited to) any implied warranties of adequancy for a particular purpose. In no event will UFV be liable to users or third parties for any direct, indirect, incidental, consequential, special damages or loss of profit resulting from any use or misuse of this data.",
   "modal_info_title": "Carbon Stock Time Series - Aditional information",
