--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -2,7 +2,7 @@
   "appname": "Carbon Stock Time Series",
   "description_title": "Description:",
   "description_content": "This tool allows the customized visualization and analyze of the time series of aboveground, belowground and soil carbon stocks at regional, municipal and basin levels. Methodology details are available in",
-  "description_terms": "The use of this information implies acceptance of the terms of use specified in",
+  "description_terms": "The use of this information implies acceptance of the disclaimer specified in",
   "label_level": "Level",
   "label_year": "Year",
   "label_name": "Name",
@@ -23,7 +23,7 @@
   "tooltip_download": "Layer download",
   "tooltip_ftp": "Time series download",
   "tooltip_info": "Aditional information",
-  "tooltip_terms": "Terms of use",
+  "tooltip_terms": "Disclaimer",
   "tooltip_coords": "Coordinate system",
   "toolsmenu_maps": "Map Time Series",
   "toolsmenu_landuse": "Land Cover and Land Use Time Series",
@@ -31,7 +31,7 @@
   "toolsmenu_onset": "Rainy Season Onset Forecast",
   "toolsmenu_mfview": "Groundwater Model Data Viewer",
   "toolsmenu_hidro": "Stream Water Flow Forecast",
-  "modal_terms_title": "Carbon Stock Time Series - Terms of use",
+  "modal_terms_title": "Carbon Stock Time Series - Disclaimer",
   "terms_of_use": "The user assumes all risk related to the use of information on the web pages of this platform. UFV provides this information as it is presented, and UFV disclaims any and all warranties, express or implied, including (but not limited to) any implied warranties of adequancy for a particular purpose. In no event will UFV be liable to users or third parties for any direct, indirect, incidental, consequential, special damages or loss of profit resulting from any use or misuse of this data.",
   "modal_info_title": "Carbon Stock Time Series - Aditional information",
   "modal_info_paraghaph01": "The Temporal series of carbon stock for Western Bahia were developed in the thesis of Emily Ane Dionizio da Silva at the Federal University of Viçosa during her PhD at Applied Meteorology Program. ",
