--- a/src/locales/pt/translationPT.json
+++ b/src/locales/pt/translationPT.json
@@ -2,7 +2,7 @@
   "appname": "Séries Temporais de Estoque de Carbono",
   "description_title": "Descrição:",
   "description_content": "Esta ferramenta permite a visualização e analise das séries temporais dos estoques de carbono acima do solo, abaixo do solo e no solo considerando diferentes níveis espaciais. Atualmente estes dados podem ser visualizados em escala regional, municipal ou de bacia hidrográfica. Detalhes sobre a metodologia destas séries temporais podem ser acessadas em",
-  "description_terms": "O uso dessas informações implica no aceite dos termos de uso especificados em",
+  "description_terms": "O uso dessas informações implica no aceite da exoneração de responsabilidade especificada em",
   "label_level": "Nível",
   "label_year": "Ano",
   "label_name": "Nome",
@@ -23,7 +23,7 @@
   "tooltip_download": "Download da camada",
   "tooltip_ftp": "Download da série temporal",
   "tooltip_info": "Informações adicionais",
-  "tooltip_terms": "Termos de uso",
+  "tooltip_terms": "Exoneração de responsabilidade",
   "tooltip_coords": "Sistema de coordenadas",
   "toolsmenu_maps": "Série Temporal de Mapas",
   "toolsmenu_landuse": "Series Temporais de Cobertura e Uso do Solo",
@@ -31,7 +31,7 @@
   "toolsmenu_onset": "Previsão do Início da Estação Chuvosa",
   "toolsmenu_mfview": "Visualizador do Modelo de Fluxo de Águas Subterrâneas",
   "toolsmenu_hidro": "Previsão de Vazões",
-  "modal_terms_title": "Séries Temporais de Estoques de Carbono - Termos de uso",
+  "modal_terms_title": "Séries Temporais de Estoques de Carbono - Exoneração de responsabilidade",
   "terms_of_use": "O usuário assume todo o risco relacionado ao uso de informações nas páginas Web desta plataforma. A UFV fornece essas informações da maneira como estão apresentadas, e a UFV se isenta de todas e quaisquer garantias, expressas ou implícitas, incluindo (mas não se limitando a) quaisquer garantias implícitas de adequação a uma finalidade específica. Em nenhum caso a UFV será responsável perante usuários ou terceiros por quaisquer danos diretos, indiretos, incidentais, conseqüenciais, especiais ou perda de lucro resultante de qualquer uso ou uso indevido desses dados.",
   "modal_info_title": "Séries Temporais de Estoques de Carbono - Informações adicionais",
   "modal_info_paraghaph01": "As séries temporais dos estoques de carbono para o Oeste da Bahia foram desenvolvidos na tese de doutorado de Emily Ane Dionizio da Silva no curso de Meteorologia Aplicada pela Universidade Federal de Viçosa.",
