Improving the plots layout and translations

--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -1,18 +1,18 @@
 {
   "appname": "Carbon Stock Time Series",
   "description_title": "Description:",
-  "description_content": "This tool allows the customized visualization and analyze of the time series of aboveground, belowground and soil carbon stocks at regional, municipal and basin levels. Methodology details are available in",
-  "description_terms": "The use of this information implies acceptance of the disclaimer specified in",
+  "description_content": "This tool allows the customized visualization and analysis of the time series of aboveground, belowground and soil carbon stocks at regional, municipality and basin levels. Methodology details are available in",
+  "description_terms": "The use of this information implies in the acceptance of the disclaimer specified in",
   "label_level": "Level",
   "label_year": "Year",
   "label_name": "Name",
   "select_region": "Regional",
   "select_watershed": "Watershed",
   "select_drainage": "Drainage area",
-  "select_municipal": "Municipal",
-  "label_agb": "Aboveground biomass",
-  "label_bgb": "Belowground biomass",
-  "label_soc": "Soil carbon stock",
+  "select_municipal": "Municipality",
+  "label_agb": "Aboveground<br>biomass",
+  "label_bgb": "Belowground<br>biomass",
+  "label_soc": "Soil carbon<br>stock",
   "label_hidrography": "Hidrography",
   "label_highways": "Highways",
   "label_watersheds": "Watersheds",
