--- a/src/locales/pt/translationPT.json
+++ b/src/locales/pt/translationPT.json
@@ -1,7 +1,7 @@
 {
   "appname": "Séries Temporais de Estoque de Carbono",
   "description_title": "Descrição:",
-  "description_content": "Esta ferramenta permite a visualização e analise das séries temporais dos estoques de carbono acima do solo, abaixo do solo e no solo considerando diferentes níveis espaciais. Atualmente estes dados podem ser visualizados em escala regional, municipal ou de bacia hidrográfica. Detalhes sobre a metodologia destas séries temporais podem ser acessadas em",
+  "description_content": "Esta ferramenta permite a visualização e análise das séries temporais dos estoques de carbono acima do solo, abaixo do solo e no solo considerando diferentes níveis espaciais. Atualmente estes dados podem ser visualizados em escala regional, municipal ou de bacia hidrográfica. Detalhes sobre a metodologia destas séries temporais podem ser acessadas em",
   "description_terms": "O uso dessas informações implica no aceite da exoneração de responsabilidade especificada em",
   "label_level": "Nível",
   "label_year": "Ano",
@@ -10,9 +10,9 @@
   "select_watershed": "Bacia hidrográfica",
   "select_drainage": "Área de Drenagem",
   "select_municipal": "Municipal",
-  "label_agb": "Biomassa acima do solo",
-  "label_bgb": "Biomassa abaixo do solo",
-  "label_soc": "Estoque de carbono no solo",
+  "label_agb": "Biomassa<br>acima<br>do solo",
+  "label_bgb": "Biomassa<br>abaixo<br>do solo",
+  "label_soc": "Estoque<br>de carbono<br>no solo",
   "label_hidrography": "Hidrografia",
   "label_highways": "Rodovias",
   "label_watersheds": "Bacias hidrográficas",
