--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -10,9 +10,12 @@
   "select_watershed": "Watershed",
   "select_drainage": "Drainage area",
   "select_municipal": "Municipality",
-  "label_agb": "Aboveground<br>biomass",
-  "label_bgb": "Belowground<br>biomass",
-  "label_soc": "Soil carbon<br>stock",
+  "label_agb": "Aboveground biomass",
+  "label_bgb": "Belowground biomass",
+  "label_soc": "Soil carbon stock",
+  "label_agb_barplot": "Aboveground<br>biomass",
+  "label_bgb_barplot": "Belowground<br>biomass",
+  "label_soc_barplot": "Soil carbon<br>stock",
   "label_hidrography": "Hidrography",
   "label_highways": "Highways",
   "label_watersheds": "Watersheds",
@@ -45,7 +48,7 @@
   "modal_info_ref02": "Dionizio, E.A.D, 2019. The effect of land use change on soil physical properties and on carbon stocks on sandy soils of a Cerrado agricultural frontier. Tese de Doutorado, Universidade Federal de Viçosa, março 2019. Orientador: Marcos Heil Costa.",
   "modal_info_ref03": "Dionizio, Emily Ane; Pimenta, Fernando Martins; Lima, Lucas Barbosa; Costa, Marcos Heil (2020): Historical carbon stocks database for Western Bahia (1990-2018). PANGAEA.",
   "popup_clickout": "Out of layer",
-  "stackplot_title": "Carbon stocks (1990 -2018)",
+  "stackplot_title": "Carbon stocks (1990 - 2018)",
   "barplot_title": "Carbon stocks",
   "label_plot_xaxis": "Type"
 }
