--- a/src/locales/pt/translationPT.json
+++ b/src/locales/pt/translationPT.json
@@ -10,9 +10,12 @@
   "select_watershed": "Bacia hidrográfica",
   "select_drainage": "Área de Drenagem",
   "select_municipal": "Municipal",
-  "label_agb": "Biomassa<br>acima<br>do solo",
-  "label_bgb": "Biomassa<br>abaixo<br>do solo",
-  "label_soc": "Estoque<br>de carbono<br>no solo",
+  "label_agb": "Biomassa acima do solo",
+  "label_bgb": "Biomassa abaixo do solo",
+  "label_soc": "Estoque de carbono no solo",
+  "label_agb_barplot": "Biomassa<br>acima<br>do solo",
+  "label_bgb_barplot": "Biomassa<br>abaixo<br>do solo",
+  "label_soc_barplot": "Estoque<br>de carbono<br>no solo",
   "label_hidrography": "Hidrografia",
   "label_highways": "Rodovias",
   "label_watersheds": "Bacias hidrográficas",
@@ -45,7 +48,7 @@
   "modal_info_ref02": "Dionizio, E.A.D, 2019. The effect of land use change on soil physical properties and on carbon stocks on sandy soils of a Cerrado agricultural frontier. Tese de Doutorado, Universidade Federal de Viçosa, março 2019. Orientador: Marcos Heil Costa.",
   "modal_info_ref03": "Dionizio, Emily Ane; Pimenta, Fernando Martins; Lima, Lucas Barbosa; Costa, Marcos Heil (2020): Historical carbon stocks database for Western Bahia (1990-2018). PANGAEA.",
   "popup_clickout": "Fora da camada",
-  "stackplot_title": "Estoques de carbono (1990 -2018)",
+  "stackplot_title": "Estoques de carbono (1990 - 2018)",
   "barplot_title": "Estoques de carbono",
   "label_plot_xaxis": "Tipo"
 }
